Adds webrtc adapter shim

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <title>Chat-6</title>
   <base href="/">
@@ -10,6 +11,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- load material icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- webrtc shim -->
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+
 </head>
 
 <body>
